# noonapi-python

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
examples/: fbpi.py  whoami.py
openapi/swagger/: index.js  postprocessStatus.py
openapi/swagger/noonapi/namshi/customer_returns/v1/: customer_returns.swagger.json  customer_returns_noon.swagger.json
openapi/swagger/noonapi/namshi/pricing/v1/: pricing_namshi.swagger.json  pricing_noon.swagger.json
openapi/swagger/noonapi/noon/content/v1/: content.swagger.json  content_namshi.swagger.json  content_noon.swagger.json
openapi/swagger/noonapi/noon/fbn/v1/: inbound.swagger.json  inbound_namshi.swagger.json
openapi/swagger/noonapi/noon/fbpi/v1/: fbpi_namshi.swagger.json  fbpi_noon.swagger.json
openapi/swagger/noonapi/noon/fbpo/v1/: fbpo_namshi.swagger.json  fbpo_noon.swagger.json
openapi/swagger/noonapi/noon/offer/v1/: offer.swagger.json  offer_namshi.swagger.json
openapi/swagger/noonapi/noon/pricing/v1/: pricing_namshi.swagger.json  pricing_noon.swagger.json
openapi/swagger/noonapi/noon/stock/v1/: stock.swagger.json  stock_namshi.swagger.json
openapi/swagger/noonapi/noon/xborder_pricing/v1/: xborder_pricing.swagger.json  (+2 more)
openapi/swagger/noonapi/util/whip_events/: events_namshi.swagger.json
scripts/: sync_swagger.sh
src/noonapi/: __init__.py  constants.py  credentials.py  errors.py  session.py
src/noonapi/models/: __init__.py  fbpi.py
src/noonapi/services/: __init__.py  auth.py  fbpi.py
(+18 files in other folders)
